--- a/geographical-system/mainwindow.ui
+++ b/geographical-system/mainwindow.ui
@@ -42,7 +42,7 @@
     <cursorShape>ArrowCursor</cursorShape>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="page">
     <widget class="QPushButton" name="insertButton">
@@ -90,6 +90,9 @@
        <width>241</width>
        <height>192</height>
       </rect>
+     </property>
+     <property name="editTriggers">
+      <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
      </property>
      <property name="selectionBehavior">
       <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
